Clean up notebooks and add index

--- a/notebooks/geosciences/Cartography_Cartopy.ipynb
+++ b/notebooks/geosciences/Cartography_Cartopy.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Creating maps in Cartopy\n",
-    "\n",
+    "``` {index} Cartopy\n",
+    "```\n",
     "In this notebook we will learn how to create maps using [*Cartopy*](https://scitools.org.uk/cartopy/) package for Python.\n",
     "\n",
     "The package uses standard Matplotlib engine to generate plots, which makes it very easy to personalise them."
@@ -203,7 +204,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -273,7 +278,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -384,7 +393,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -435,7 +448,8 @@
    "metadata": {},
    "source": [
     "## Plotting shapefiles\n",
-    "\n",
+    "``` {index} Cartopy: plotting shapefiles\n",
+    "```\n",
     "**California plate boundaries**\n",
     "\n",
     "California lies at a transform fault boundary between the Pacific and the North American plates. This boundary is characterised by predominant horizontal motion between the plates.\n",
@@ -511,9 +525,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can plot California shapefiles in Cartopy:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -635,6 +660,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
