--- a/notebooks/geosciences/Dynamic_Earth.ipynb
+++ b/notebooks/geosciences/Dynamic_Earth.ipynb
@@ -7,7 +7,8 @@
     "# Dynamic Earth and Planets\n",
     "## Theory\n",
     "### Plate tectonics\n",
-    "\n",
+    "``` {index} Plate tectonics\n",
+    "```\n",
     "The fundamental theory behind behaviour of the Earth's outer shell, the lithosphere, is called plate tectonics. The lithosphere is broken into multiple plates that interact at their boundaries. There are three types of this interaction: plates can converge, diverge or move along their boundaries.\n",
     "\n",
     "<img src=\"../images/plate_boundaries.png\" alt=\"tectonic plate boundaries on Earth\" style=\"width:600px;\"/>\n",
@@ -26,7 +27,8 @@
     "\n",
     "## Exercise\n",
     "### Seafloor age vs. depth relationship\n",
-    "\n",
+    "``` {index} Seafloor age\n",
+    "```\n",
     "Parsons & Sclater (1977) provide a relationship between seafloor age $t$ (Ma) and depth $d(t)$:\n",
     "\n",
     "$$d(t) = 2500 + 350\\times t^{1/2}$$,\n",
@@ -161,7 +163,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -444,7 +450,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -667,7 +677,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "plt.rcParams.update({'font.size': 12})\n",
@@ -763,6 +777,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
