--- a/notebooks/mathematics/Statistics_for_Geoscientists.ipynb
+++ b/notebooks/mathematics/Statistics_for_Geoscientists.ipynb
@@ -6,6 +6,9 @@
    "source": [
     "# Introduction to statistics for Geoscientists\n",
     "\n",
+    "``` {index} Statistics: basics\n",
+    "```\n",
+    "\n",
     "*Statistics* is a study concerning the collection, organisation, analysis, interpretation and presentation of data. Statistics help with describing and analysing non-deterministic phenomena, i.e. ones that cannot be precisely predicted.\n",
     "\n",
     "*Population* is a group/set of items/events of interest in the study.\n",
