--- a/_sources/mathematics/Fractals.ipynb
+++ b/_sources/mathematics/Fractals.ipynb
@@ -5,6 +5,10 @@
    "metadata": {},
    "source": [
     "# Fractals\n",
+    "\n",
+    "``` {index} Fractals\n",
+    "```\n",
+    "\n",
     "## Introduction\n",
     "**Fractals** are never-ending, very complex patterns that are self-similar at different scales. They are created through recursion.\n",
     "\n",
