Create separate dir for year 1 python notebooks

--- a/notebooks/coding/Intro to Python/Dictionaries.ipynb
+++ b/notebooks/coding/Intro to Python/Dictionaries.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Dictionaries\n",
+    "``` {index} Dictionaries\n",
+    "```\n",
     "A dictionary is a Python data structure that can store data as key-value pairs. The syntax is:\n",
     "\n",
     "    dict1 = {key1: value1, key2: value2, key3: value3, etc...}\n",
