--- a/notebooks/coding/Intro to Python/File_handling.ipynb
+++ b/notebooks/coding/Intro to Python/File_handling.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# File handling in Python\n",
-    "\n",
+    "``` {index} File handling\n",
+    "```\n",
     "Suppose we have a text file like below, from which we would like to extract temperature and density data:\n",
     "\n",
     "$$\n",
@@ -221,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
