--- a/notebooks/coding/Intro to Python/Flow_control_statements.ipynb
+++ b/notebooks/coding/Intro to Python/Flow_control_statements.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Flow control statements\n",
+    "``` {index} Break and continue statements\n",
+    "```\n",
     "## Break and continue statements\n",
     "\n",
     "The _break_ and _continue_ statements are used in loops (_while_ or *for*) to modify behaviour of the loop. _break_ ends the loop, while _continue_ ends the current iteration and continues onto the next one.\n",
@@ -76,6 +78,8 @@
    "metadata": {},
    "source": [
     "## Pass statement\n",
+    "``` {index} Pass statement\n",
+    "```\n",
     "_pass_ statement is used in the code to \"do nothing\"."
    ]
   },
