--- a/notebooks/coding/Intro to Python/For_loops.ipynb
+++ b/notebooks/coding/Intro to Python/For_loops.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# _For_ loops\n",
-    "\n",
+    "``` {index} Loops: for loop\n",
+    "```\n",
     "_For_ loops are used to iterate over elements in a list (or any other iterable structure). Iterating means looping over. The syntax for this type of loop is:\n",
     "\n",
     "    for element in list:\n",
