--- a/notebooks/coding/Intro to Python/Functions.ipynb
+++ b/notebooks/coding/Intro to Python/Functions.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Custom functions\n",
-    "\n",
+    "``` {index} Creating functions\n",
+    "```\n",
     "Functions in Python are blocks of code that will only be executed when called. They look like this:\n",
     "\n",
     "    def function_name(arg1, arg2, ...):\n",
