--- a/notebooks/coding/Intro to Python/Handling_errors.ipynb
+++ b/notebooks/coding/Intro to Python/Handling_errors.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Handling errors\n",
-    "\n",
+    "``` {index} Handling errors\n",
+    "```\n",
     "When an _error_ occurs in Python, an _exception_ is _raised_. \n",
     "\n",
     "## Error types\n",
