--- a/notebooks/coding/Intro to Python/If_statement.ipynb
+++ b/notebooks/coding/Intro to Python/If_statement.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# _If_ construct\n",
+    "``` {index} If statement\n",
+    "```\n",
     "\n",
     "_If_ construct allows to create cases in the code based on conditions:\n",
     "\n",
