--- a/notebooks/coding/Intro to Python/Importing.ipynb
+++ b/notebooks/coding/Intro to Python/Importing.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Importing in Python\n",
-    "\n",
+    "``` {index} Importing modules\n",
+    "```\n",
     "Python's growing popularity over the years has inevitably lead to the development of thousands of excellent libraries and frameworks. This section will cover the basics of importing them, but also cover how to import your own classes, functions and much more.\n",
     "\n",
     "Often we will want to import many functions and objects from a certain module, so we would simply import the entire module: "
@@ -172,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
