--- a/notebooks/coding/Intro to Python/List_comprehensions.ipynb
+++ b/notebooks/coding/Intro to Python/List_comprehensions.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# List comprehensions\n",
-    "\n",
+    "``` {index} Lists: list comprehensions\n",
+    "```\n",
     "List comprehensions are 'shortcuts' in creating lists using loops within one statement. The main advantage is that they are shorter to write. The syntax is:\n",
     "\n",
     "    some_list = [ expression for item in some_iterable if condition]\n",
