--- a/notebooks/coding/Intro to Python/Lists.ipynb
+++ b/notebooks/coding/Intro to Python/Lists.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Lists\n",
+    "``` {index} Lists\n",
+    "```\n",
     "A list is an object that contains multiple elements in defined order (referred to as index number). The syntax is:\n",
     "\n",
     "    l = [element1, element2, element3, element4, etc..]\n",
