--- a/notebooks/coding/Intro to Python/Matplotlib.ipynb
+++ b/notebooks/coding/Intro to Python/Matplotlib.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Plotting data with Matplotlib\n",
+    "``` {index} Matplotlib plotting\n",
+    "```\n",
     "[Matplotlib](https://matplotlib.org/) is a commonly used Python library for plotting data. Matplotlib functions are not built-in so we need to import it every time we want to plot something. The convention is to import _matplotlib.pyplot_ as _plt_, however, any prefix can be used:"
    ]
   },
@@ -44,7 +46,11 @@
     "- plt.show() - displays the graph\n",
     "\n",
     "## Example plots\n",
-    "### Line and scatter data"
+    "### Line and scatter data\n",
+    "```{index} Plots: line\n",
+    "```\n",
+    "```{index} Plots: scatter\n",
+    "```"
    ]
   },
   {
@@ -98,7 +104,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Histogram"
+    "### Histogram\n",
+    "``` {index} Plots: histogram\n",
+    "```"
    ]
   },
   {
@@ -143,7 +151,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Image plot"
+    "### Image plot\n",
+    "``` {index} Plots: image\n",
+    "```"
    ]
   },
   {
@@ -205,7 +215,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3D plots"
+    "### 3D plots\n",
+    "``` {index} Plots: 3D\n",
+    "```"
    ]
   },
   {
