--- a/notebooks/coding/Intro to Python/Nested_lists.ipynb
+++ b/notebooks/coding/Intro to Python/Nested_lists.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Nested lists\n",
+    "``` {index} Lists: nested lists\n",
+    "```\n",
     "Lists can contain elements which are also lists."
    ]
   },
