--- a/notebooks/coding/Intro to Python/Printing_and_formatting_statements.ipynb
+++ b/notebooks/coding/Intro to Python/Printing_and_formatting_statements.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Printing and formatting statements\n",
+    "``` {index} Python basics\n",
+    "```\n",
     "## General\n",
     "### Printing text\n",
     "A line of code in Python is a _statement_:\n",
@@ -132,7 +134,8 @@
    "metadata": {},
    "source": [
     "## Formatted printing\n",
-    "\n",
+    "``` {index} Formatted printing\n",
+    "```\n",
     "Sometimes we want to insert certain texts or numbers into _print_ statemtens.\n",
     "\n",
     "Inserting:\n",
