--- a/notebooks/coding/Intro to Python/Sets.ipynb
+++ b/notebooks/coding/Intro to Python/Sets.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Sets\n",
+    "``` {index} Sets\n",
+    "```\n",
     "Sets are a type of Python container that are equivalent to sets in maths. They can only contain one copy of a particular element and they are not ordered. They don't have indices or keys. Elements in a set can be of any type.\n",
     "\n",
     "Sets are defined with curly brackets:\n",
