--- a/notebooks/coding/Intro to Python/Tuples.ipynb
+++ b/notebooks/coding/Intro to Python/Tuples.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Tuples\n",
+    "``` {index} Tuples\n",
+    "```\n",
     "Tuples are constant lists. They can be used like lists to store data but they cannot be modified (they are immutable). They are used for storing multiple values from functions. They are created like lists, but with round brackets:\n",
     "\n",
     "    tuple1 = (variable1, variable2, variable3)\n",
