--- a/notebooks/coding/Intro to Python/Variables.ipynb
+++ b/notebooks/coding/Intro to Python/Variables.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Variables\n",
+    "``` {index} Variables\n",
+    "```\n",
     "\n",
     "A variable is an object that contains an assigned value:"
    ]
