--- a/notebooks/coding/Intro to Python/While_loops.ipynb
+++ b/notebooks/coding/Intro to Python/While_loops.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# _While_ loops\n",
-    "\n",
+    "``` {index} Loops: while loops\n",
+    "```\n",
     "_While_ loops repeat instructions until certain condition is **False** (while the condition is **True**). The syntax is as follows:\n",
     "    \n",
     "    while boolean:\n",
