Sets and Functions

--- a/notebooks/mathematics/sets and functions/logic.ipynb
+++ b/notebooks/mathematics/sets and functions/logic.ipynb
@@ -34,48 +34,48 @@
     "* - $\\forall$\n",
     "  - universal quantification\n",
     "  - for all, for any, for each\n",
-    "  - $\\forall x$ ($x \\in$ A) $\\Rightarrow$ ($x \\in$ B)\n",
-    "  - Meaning\n",
+    "  - $\\forall x \\in \\mathbb{R}, x^2 \\geq 0$\n",
+    "  - For all real numbers $x$, $x^2$ is greater or equal to $0$\n",
     "* - $\\exists$\n",
     "  - existential quantification\n",
     "  - there exists\n",
-    "  - $\\exists a(a \\in$ A)\n",
-    "  - There exists an element $a$ in A, i.e. A $\\neq \\emptyset$\n",
+    "  - $\\forall n \\in \\mathbb{N}, \\exists x \\in \\mathbb{R} : | n - x | < 1$\n",
+    "  - For all natural numbers $n$ there exists a real number $x$ such that $| n - x| < 1$\n",
     "* - $\\exists !$\n",
     "  - uniqueness quantification\n",
     "  - there exists exactly one\n",
-    "  - $\\exists ! a(a \\in$ A)\n",
-    "  - There exists exactly one element $a$ in A, i.e. A is a set of one element  \n",
+    "  - $A \\subseteq \\mathbb{N} \\implies \\exists ! m \\in A : m \\geq n, \\forall n \\in A$\n",
+    "  - If $A$ is a subset of $\\mathbb{N}$ then there exists a unique $m \\in A$ such that $m \\geq n$, for all $n \\in A$  \n",
     "* - $\\lnot$\n",
     "  - negation\n",
     "  - not\n",
-    "  - $\\forall x$, ($x \\in$ A) $\\Rightarrow$ ($x \\in$ B)\n",
-    "  - Explanation\n",
+    "  - $\\lnot (x = y) \\iff (x \\neq y)$\n",
+    "  - $x = y$ is not true iff $x \\neq y$\n",
     "* - $\\land$\n",
     "  - conjunction\n",
     "  - and\n",
-    "  - $\\forall x$, ($x \\in$ A) $\\Rightarrow$ ($x \\in$ B)\n",
-    "  - Explanation\n",
+    "  - $((x \\leq 1) \\land (x \\geq 1)) \\iff x = 1$\n",
+    "  - $x$ is less or equal than 1 and greater or equal to $1$ iff $x = 1$\n",
     "* - $\\lor$\n",
     "  - disjunction\n",
-    "  - implies, if... then\n",
-    "  - $\\forall x$, ($x \\in$ A) $\\Rightarrow$ ($x \\in$ B)\n",
-    "  - Explanation\n",
+    "  - or\n",
+    "  - $((x \\leq 0) \\lor (x \\geq 0)) \\iff x \\in \\mathbb{R}$\n",
+    "  - $x \\leq 0$ or $x \\geq 0$ iff $x$ is a real number\n",
     "* - $\\implies$\n",
     "  - implication\n",
     "  - implies, if... then\n",
-    "  - $\\forall x$, ($x \\in$ A) $\\Rightarrow$ ($x \\in$ B)\n",
-    "  - Explanation\n",
+    "  - $n \\in \\mathbb{N} \\implies n \\in \\mathbb{Z}$\n",
+    "  - If $n$ is element of $\\mathbb{N}$ then it is element of $\\mathbb{Z}$\n",
     "* - $\\iff$\n",
     "  - equivalence\n",
     "  - if and only if, iff\n",
-    "  - $\\forall x$ ($x \\in$ A) $\\iff$ ($x \\in$ B)\n",
-    "  - Explanation\n",
-    "* - $:, |, \\text{s.t.}$\n",
+    "  - ($x$ is prime) $\\land (x\\mod 2 = 0) \\iff x=2$\n",
+    "  - $x=2$ if and only if $x$ is a prime number and $x \\mod 2 = 0$\n",
+    "* - $:$, $|$, s.t.\n",
     "  - condition\n",
     "  - such that\n",
-    "  - $\\forall x$, ($x \\in$ A) $\\Rightarrow$ ($x \\in$ B)\n",
-    "  - Explanation\n",
+    "  - $\\forall x \\in \\mathbb{R} : x > 0, \\sqrt{x} > 0$\n",
+    "  - For all $x$ element of $\\mathbb{R}$ such that x is greater than $0$, $\\sqrt{x}$ is greater than $0$\n",
     "  \n",
     "```"
    ]
