--- a/_sources/geosciences/Google_Earth_Engine_Foundations.ipynb
+++ b/_sources/geosciences/Google_Earth_Engine_Foundations.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Google Earth Engine\n",
+    "# Google Earth Engine Foundations\n",
     "\n",
     "This notebooks aims to walk you through and clarify some of the basic concept of using the Google Earth engine by building upon our script step by step. Majority of this content has been borrowed from a [github repository]() containing over 360+ Jupyter Python notebooks examples to demonstrate the [Google Earth Engine guide](https://developers.google.com/earth-engine) in python notebooks."
    ]
@@ -477,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
