--- a/notebooks/geosciences/Image_Filtering.ipynb
+++ b/notebooks/geosciences/Image_Filtering.ipynb
@@ -19,11 +19,13 @@
    "source": [
     "What we aim to achieve is to have a moving window across our image which calculates an average of the values of the input image within the window for the central pixel. This smoothens the contrast between pixels.\n",
     "\n",
-    "<img src=\"Data_Image_Filtering/convolution_graphical.png\" style=\"width:30%;\"/>\n",
+    "<img src=\"Data_Image_Filtering/convolution_graphical.png\" style=\"width:30%; float: center\"/>\n",
     "\n",
     "This can be acccomplished through convolution, which is a neighbourhood operation in which each output pixel is the weighted sum of neighbouring input pixels. The matrix of weights is called the convolution kernel, below we show a 3x3 kernel that we will use for our moving average filter:\n",
     "\n",
-    "<img src=\"Data_Image_Filtering/kernel.png\" style=\"width:15%;\"/>\n",
+    "\n",
+    "<img src=\"Data_Image_Filtering/kernel.png\" style=\"width:15%; float: center\"  />\n",
+    "\n",
     "\n",
     "To prevent against empty values at the edges of the image we can use padding, for instance we can place zero values in these cells or mirror the available values within our window. If this is not done and we ignore the edge pixels we will reduce the size of our image.\n",
     "\n",
@@ -216,7 +218,7 @@
     "\n",
     "A simple Kernel that we can use for this would be:\n",
     "\n",
-    "<img src=\"Data_Image_Filtering/filter_sharpen.png\" style=\"width:10%\"/>\n",
+    "<img src=\"Data_Image_Filtering/filter_sharpen.png\" style=\"width:10%; float: center\"/>\n",
     "\n",
     "The effect of this filter can be see in the following image:"
    ]
@@ -269,7 +271,7 @@
    "source": [
     "In some cases the filters you will be using can be separated into two smaller filters and convolve these one after the other with our image. for instance:\n",
     "\n",
-    "<img src=\"Data_Image_Filtering/filter_simplified.png\"  style=\"width:30%;\"/>\n",
+    "<img src=\"Data_Image_Filtering/filter_simplified.png\"  style=\"width:30%; float: center\"/>\n",
     "\n",
     "What this achieves is that it can bring down our computational complexity to $ O(N^2 K) $, whereas before it was $ O(N^2 K^2) $"
    ]
@@ -284,7 +286,7 @@
     "\n",
     "To find these brightness discontinuities derivatives can be used to characterise these as follows\n",
     "\n",
-    "<img src=\"Data_Image_Filtering/differential.png\" style=\"width:40%;\"/>\n",
+    "<img src=\"Data_Image_Filtering/differential.png\" style=\"width:40%; float: center\"/>\n",
     "\n",
     "The way to apply this is through finite differencing. We can express this finite differencing in a kernel (h) and convolve this with our image:\n",
     "\n",
@@ -438,7 +440,7 @@
    "source": [
     "Our edge detection is not perfect as we do not have ideal large steps in brightness on every edge, but more of a transition.\n",
     "\n",
-    "<img src=\"Data_Image_Filtering/gradient.png\" style=\"width:30%;\"/>\n",
+    "<img src=\"Data_Image_Filtering/gradient.png\" style=\"width:30%; float: center\"/>\n",
     "\n",
     "Hence it is not always easy to say that there should be an edge between two pixels or not. One simple step we can take to greatly improve edge detection is smoothening out noise using a gaussian filter for instance. This can become very important when taking second derivatives like the laplacian as derivatives are very sensitive to noise."
    ]
