--- a/notebooks/geosciences/Image_Filtering.ipynb
+++ b/notebooks/geosciences/Image_Filtering.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "What we aim to achieve is to have a moving window across our image which calculates an average of the values of the input image within the window for the central pixel. This smoothens the contrast between pixels.\n",
     "\n",
-    "<img src=\"Data_Image_Filtering/convolution_graphical.png\" style=\"width:30%; float: center\"/>\n",
+    "<img src=\"Data_Image_Filtering/convolution_graphical.png\" style=\"width:30%\" class =\"center\"/>\n",
     "\n",
     "This can be acccomplished through convolution, which is a neighbourhood operation in which each output pixel is the weighted sum of neighbouring input pixels. The matrix of weights is called the convolution kernel, below we show a 3x3 kernel that we will use for our moving average filter:\n",
     "\n",
