--- a/notebooks/geosciences/Image_Filtering.ipynb
+++ b/notebooks/geosciences/Image_Filtering.ipynb
@@ -21,6 +21,15 @@
     "\n",
     "<img src=\"Data_Image_Filtering/convolution_graphical.png\" style=\"width:30%\" class =\"center\"/>\n",
     "\n",
+    "<div style=\"display: flex; justify-content: center\">\n",
+    "        <img src=\"Data_Image_Filtering/convolution_graphical.png\">\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "<div style=\"justify-content: center\">\n",
+    "        <img src=\"Data_Image_Filtering/convolution_graphical.png\" style=\"width:30%\">\n",
+    "</div>\n",
+    "\n",
     "This can be acccomplished through convolution, which is a neighbourhood operation in which each output pixel is the weighted sum of neighbouring input pixels. The matrix of weights is called the convolution kernel, below we show a 3x3 kernel that we will use for our moving average filter:\n",
     "\n",
     "\n",
