--- a/notebooks/geosciences/Google_Earth_Engine_Foundations.ipynb
+++ b/notebooks/geosciences/Google_Earth_Engine_Foundations.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Google Earth Engine Foundations\n",
     "\n",
-    "This notebooks aims to walk you through and clarify some of the basic concept of using the Google Earth engine by building upon our script step by step. Majority of this content has been borrowed from a [github repository]() containing over 360+ Jupyter Python notebooks examples to demonstrate the [Google Earth Engine guide](https://developers.google.com/earth-engine) in python notebooks."
+    "This notebooks aims to walk you through and clarify some of the basic concept of using the Google Earth engine by building upon our script step by step. Majority of this content has been borrowed from this [github repository](https://github.com/giswqs/earthengine-py-notebooks) containing over 360+ Jupyter Python notebooks examples to demonstrate the [Google Earth Engine guide](https://developers.google.com/earth-engine) in python notebooks."
    ]
   },
   {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,24 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6cf0352e879d4d74886486c1a060aeb1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[40, -100], controls=(WidgetControl(options=['position'], widget=HBox(children=(ToggleButton(value=…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#set map\n",
     "Map = geemap.Map(center=[40,-100], zoom=4)\n",
@@ -103,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"UROP/GEE_Foundations/1.png\" style=\"100%;\"/>"
+    "<img src=\"GEE_Foundations/1.png\" style=\"100%;\"/>"
    ]
   },
   {
@@ -134,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"UROP/GEE_Foundations/2.png\" style=\"100%;\"/>"
+    "<img src=\"GEE_Foundations/2.png\" style=\"100%;\"/>"
    ]
   },
   {
@@ -220,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"UROP/GEE_Foundations/4.png\" style=\"100%;\"/>"
+    "<img src=\"GEE_Foundations/4.png\" style=\"100%;\"/>"
    ]
   },
   {
@@ -232,18 +217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['B1', 'B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'B8', 'B9', 'B10', 'B11', 'BQA']\n",
-      "['B1', 'B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'B8', 'B9', 'B10', 'B11', 'BQA', 'nd']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add Earth Engine dataset\n",
     "point = ee.Geometry.Point(-122.262, 37.8719)\n",
@@ -275,7 +251,7 @@
    "metadata": {},
    "source": [
     "## Reducing\n",
-    "this average images to enhance common information and reduce noise like cloud cover"
+    "Reducing enhances common information between images and reduces noise like cloud cover by averaging multiple images."
    ]
   },
   {
@@ -306,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"UROP/GEE_Foundations/5.png\" style=\"100%;\"/>"
+    "<img src=\"GEE_Foundations/5.png\" style=\"100%;\"/>"
    ]
   },
   {
@@ -318,17 +294,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'B1': 0.10156726419256697, 'B10': 288.3898316688731, 'B11': 287.4496961587173, 'B2': 0.07771978773589312, 'B3': 0.05530074222374056, 'B4': 0.03670883505442356, 'B5': 0.22139764553479283, 'B6': 0.07888235294207073, 'B7': 0.035089536963059234, 'B8': 0.047100656968120116, 'B9': 0.00156092084691453, 'BQA': 2720.11945357173}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add Earth Engine dataset\n",
     "image = ee.Image('LANDSAT/LC08/C01/T1_TOA/LC08_044034_20140318')\n",
@@ -354,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"UROP/GEE_Foundations/6.png\" style=\"100%;\"/>"
+    "<img src=\"GEE_Foundations/6.png\" style=\"100%;\"/>"
    ]
   },
   {
@@ -405,7 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"UROP/GEE_Foundations/7.png\" style=\"100%;\"/>"
+    "<img src=\"GEE_Foundations/7.png\" style=\"100%;\"/>"
    ]
   },
   {
@@ -448,17 +416,10 @@
    "metadata": {},
    "source": [
     "With CloudMask function:\n",
-    "<img src=\"UROP/GEE_Foundations/8.png\" style=\"50%\"/>\n",
+    "<img src=\"GEE_Foundations/8.png\" style=\"50%\"/>\n",
     "Without CloudMask function:\n",
-    "<img src=\"UROP/GEE_Foundations/9.png\" style=\"50%\"/>"
+    "<img src=\"GEE_Foundations/9.png\" style=\"50%\"/>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
