new notebook and correct image path

--- a/notebooks/geosciences/Google_Earth_Engine_Getting_Started_.ipynb
+++ b/notebooks/geosciences/Google_Earth_Engine_Getting_Started_.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"GEE_Getting_started/1.png\" style=\"100%;\"/>"
+    "<img src=\"GEE_Getting_Started/1.png\" style=\"100%;\"/>"
    ]
   },
   {
