--- a/_sources/mathematics/complex analysis/Introduction.ipynb
+++ b/_sources/mathematics/complex analysis/Introduction.ipynb
@@ -6,6 +6,9 @@
    "source": [
     "# Introduction\n",
     "\n",
+    "(comp_numbers)=\n",
+    "## Complex numbers\n",
+    "\n",
     "In complex analysis we are dealing with the set of complex numbers $\\mathbb{C}$ which are ordered pairs of the form $(x, y)$, where $x$ and $y$ are real numbers. If we introduce the imaginary unit $i = \\sqrt{-1}$ we can write it in its *rectangular form*:\n",
     "\n",
     "$$ z = x + iy \n",
@@ -17,9 +20,10 @@
     "\n",
     "If Re$(z) = 0$ and Im$(z) \\neq 0$ we say that $z$ is *pure imaginary*. On the other hand, if Im$(z) = 0$ and Re$(z) \\neq 0$ we recover the *pure real* number $x$. Therefore, we identify real numbers as complex numbers whose imaginary part is equal to 0, so $\\mathbb{R}$ is a subset of $\\mathbb{C}$, i.e. $\\mathbb{R} \\subset \\mathbb{C}$.\n",
     "\n",
-    "# Basic operations\n",
+    "(comp_algebra)=\n",
+    "## Complex algebra\n",
     "\n",
-    "## Addition and multiplication\n",
+    "### Addition and multiplication\n",
     "\n",
     "Adding complex numbers is performed by adding real and imaginary parts separately:\n",
     "\n",
@@ -32,7 +36,7 @@
     "& = (x_1 x_2 - y_1 y_2) + i(x_1 y_2 + x_2 y_1).\n",
     "\\end{align} $$\n",
     "\n",
-    "## Complex conjugate\n",
+    "### Complex conjugate\n",
     "```{index} Complex conjugate\n",
     "```\n",
     "\n",
@@ -40,7 +44,7 @@
     "\n",
     "$$ z^* \\equiv x - iy $$\n",
     "\n",
-    "This is an [involutory operation](https://en.wikipedia.org/wiki/Involution_(mathematics)) since $ (z^*)^* = z $ with the following properties:\n",
+    "This is an [involutory operation](https://en.wikipedia.org/wiki/Involution_(mathematics)) since \\\\( (z^*)^* = z \\\\) with the following properties:\n",
     "\n",
     "$$ (z_1 \\pm z_2)^* = z_1^* \\pm z_2^* \\\\\n",
     "(z_1 \\cdot z_2)^* = z_1^* \\cdot z_2^* \\\\\n",
@@ -50,7 +54,7 @@
     "\n",
     "$$ \\text{Re}(z) = \\frac{1}{2} (z + z^*), \\quad \\text{Im}(z) = \\frac{1}{2i} (z - z^*) $$\n",
     "\n",
-    "## Modulus \n",
+    "### Modulus \n",
     "\n",
     "```{index} Modulus\n",
     "```\n",
@@ -71,7 +75,7 @@
     "\n",
     "$$|z^*| = |z|, \\quad z^* \\cdot z = |z|^2 $$\n",
     "\n",
-    "## Division\n",
+    "### Division\n",
     "\n",
     "We divide a complex number $z_1$ by another complex number $z_2 \\neq 0$ by expanding the fraction such that the denominator becomes a real number. We do this by multiplying both the numerator and the denominator by $z_2^*$ (see the last property of a modulus above).\n",
     "\n",
@@ -80,13 +84,26 @@
     "& = \\left ( \\frac{x_1x_2 + y_1y_2}{x_2^2 + y_2^2} \\right ) + i \\left ( \\frac{x_2y_1- x_1y_2}{x_2^2 + y_2^2} \\right ) \n",
     "\\end{align} $$\n",
     "\n",
-    "## Multiplicative inverse\n",
+    "### Multiplicative inverse\n",
     "\n",
-    "Let us find the inverse of a complex number $z = x + iy$:\n",
+    "Let us find the reciprocal of a complex number $z = x + iy$:\n",
     "\n",
     "$$ \\begin{align}\n",
     "z^{-1} & = \\frac{1}{z} = \\frac{1}{x + iy} \\cdot \\frac{x - iy}{x -iy} = \\frac{x - iy}{x^2 + y^2} \\\\ & = \\frac{x}{x^2 + y^2} -i \\frac{y}{x^2 + y^2}\n",
-    "\\end{align} $$"
+    "\\end{align} $$\n",
+    "\n",
+    "### Powers and roots\n",
+    "\n",
+    "Some operations are quite tedious and much more difficult to perform on complex numbers in their rectangular form $z = x + iy$. Raising a complex number to some power and taking a root are one of such operations. We will therefore show the formula here for these operations for a complex number in its {ref}`comp_trig_form` (we introduce this in the next notebook).\n",
+    "\n",
+    "$$ z = r( cos \\varphi + i \\sin \\varphi) \\\\\n",
+    "z^n = r^n ( cos n \\varphi + i \\sin n \\varphi) $$\n",
+    "\n",
+    "Let $ w = z^{1/n} $, then\n",
+    "\n",
+    "$$ w = r^{1/n} \\left ( \\cos \\left ( \\frac{ \\varphi}{n} + \\frac{2k \\pi}{n} \\right ) + i \\sin \\left ( \\frac{ \\varphi}{n} + \\frac{2k \\pi}{n} \\right ) \\right ), $$\n",
+    "\n",
+    "where $k \\in \\mathbb{Z}$."
    ]
   },
   {
