--- a/notebooks/geosciences/Image_Filtering.ipynb
+++ b/notebooks/geosciences/Image_Filtering.ipynb
@@ -473,16 +473,17 @@
    "metadata": {},
    "source": [
     "## References and Further Reading:\n",
-    "For further reading image filtering and alternative kernels please see:\n",
-    "https://en.wikipedia.org/wiki/Kernel_(image_processing)\n",
-    "https://uk.mathworks.com/help/images/what-is-image-filtering-in-the-spatial-domain.html\n",
-    "\n",
-    "Alternatively here you can find python functions that have the kernel integrated in the code already:\n",
-    "https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_filtering/py_filtering.html\n",
-    "\n",
-    "Edge detection and more advanced methods:\n",
-    "https://en.wikipedia.org/wiki/Edge_detection"
+    "- For further reading image filtering and alternative kernels please see: <br /> ->En.wikipedia.org. 2020. Kernel (Image Processing). [online] Available at: <https://en.wikipedia.org/wiki/Kernel_(image_processing)> [Accessed 13 July 2020]. <br /> ->Uk.mathworks.com. 2020. What Is Image Filtering In The Spatial Domain?- MATLAB & Simulink- Mathworks United Kingdom. [online] Available at: <https://uk.mathworks.com/help/images/what-is-image-filtering-in-the-spatial-domain.html> [Accessed 13 July 2020].\n",
+    "- Alternatively here you can find python functions that have the kernel integrated as functions:<br /> ->Opencv-python-tutroals.readthedocs.io. 2020. Smoothing Images — Opencv-Python Tutorials 1 Documentation. [online] Available at: <https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_filtering/py_filtering.html> [Accessed 13 July 2020].\n",
+    "- Edge detection and more advanced methods:<br /> ->En.wikipedia.org. 2020. Edge Detection. [online] Available at: <https://en.wikipedia.org/wiki/Edge_detection> [Accessed 13 July 2020]."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
