--- a/notebooks/geosciences/Image_Point_Operations.ipynb
+++ b/notebooks/geosciences/Image_Point_Operations.ipynb
@@ -607,12 +607,8 @@
     "## References\n",
     "Theory, content structure and images have been obtained from module thought content: J Mason, P., n.d. ESE 3.25 Advanced Remote Sensing. pp.3 - 12.\n",
     "\n",
-    "1. Stack Overflow. 2020. Define A Colormap For Each Set Of Values In An Array. [online] Available at: <https://stackoverflow.com/questions/42605051/define-a-colormap-for-each-set-of-values-in-an-array> [Accessed 22 June 2020].\n",
-    "2. GUO, L., 1991. Balance contrast enhancement technique and its application in image colour composition. International Journal of Remote Sensing, 12(10), pp.2133-2151.\n",
-    "\n",
-    "    \n",
-    "\n",
-    "    "
+    "1. Create colourmap: <br />Stack Overflow. 2020. Define A Colormap For Each Set Of Values In An Array. [online] Available at: <https://stackoverflow.com/questions/42605051/define-a-colormap-for-each-set-of-values-in-an-array> [Accessed 22 June 2020].\n",
+    "2. BCET function: <br />GUO, L., 1991. Balance contrast enhancement technique and its application in image colour composition. International Journal of Remote Sensing, 12(10), pp.2133-2151."
    ]
   }
  ],
