--- a/_sources/geosciences/Image_Transformations_and_Orthorectification.ipynb
+++ b/_sources/geosciences/Image_Transformations_and_Orthorectification.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# Image Transformations\n",
+    "# Image Transformations and orthorectification\n",
     "\n",
     "A tranformation in itself is a function that maps one set to another set. Geometric image transformations are widely used for registration and removal of geometric distortion. Common applications include the construction of mosaics, geographical mapping, robotic vision, sattelite imagery, stereo imaging and video.\n",
     "\n",
