updates done by Ross

--- a/notebooks/coding/Dakota.ipynb
+++ b/notebooks/coding/Dakota.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Overview\n",
+    "# Dakota\n",
     "\n",
     "The dakota project provides software for optimisation and uncertainty quantification. \n",
     "\n",
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Installation\n",
+    "## Installation\n",
     "\n",
     "Dakota can be downloaded from https://dakota.sandia.gov/download.html. For the latest release savethe tar.gv file to downloads and extract it. Make sure the file is the source code. This will be yourDakota installation directory.\n",
     "\n",
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python template for Dakota\n",
+    "## Python template for Dakota\n",
     "\n",
     "To automatize the parameter space in your model using Dakota you first need to have a python script in which Dakota can adjust the parameters in the model simulations. To do this create a .py file by typing the following in the terminal."
    ]
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dakota bash file\n",
+    "## Dakota bash file\n",
     "\n",
     "The purpose of the bash file is to allow Dakota to investigate the selected parameters in the python file. In this case the bash file, e.g file.sh, creates a copy of the python file (the template file) and using the built in function ’dprepro’ changes the values of these parameters. It then runs the python script and returns the results. \n",
     "\n",
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dakota input file\n",
+    "## Dakota input file\n",
     "\n",
     "The Dakota input file must consist of the following blocks: environment, method, model, variables, interface and responses. Details on these blocks can be found on the Reference Manual and User’s Manual. These can be downloaded from https://dakota.sandia.gov/documentation.html.\n",
     "\n",
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# References\n",
+    "## References\n",
     "* https://dakota.sandia.gov"
    ]
   }
