--- a/_sources/coding/Dakota.ipynb
+++ b/_sources/coding/Dakota.ipynb
@@ -54,7 +54,7 @@
     "<p style=\"background:black\">\n",
     "<code style=\"background:black;color:white\">mkdir build\n",
     "<code style=\"background:black;color:white\">cd build\n",
-    "<code style=\"background:black;color:white\">ccmake ..    \n",
+    "<code style=\"background:black;color:white\">ccmake ..</code>\n",
     "</p>"
    ]
   },
@@ -73,7 +73,7 @@
    "source": [
     "<p style=\"background:black\">\n",
     "<code style=\"background:black;color:white\">make -j4\n",
-    "<code style=\"background:black;color:white\">make install    \n",
+    "<code style=\"background:black;color:white\">make install </code>   \n",
     "</p>"
    ]
   },
